my_vaultwarden/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    #
    cert-manager.io/cluster-issuer: "my-cluster-issuer"
    #
    traefik.ingress.kubernetes.io/service.serverstransport: vaultwarden-traefik-config@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        # ドメイン記載
        - pass.oahs.f5.si
      secretName: my-cluster-issuer-secret # cert-managerはこのシークレットに作成した証明書を格納する
  rules:
    - host: pass.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden-service
                port:
                  number: 80
